# Inkly

./: .env  Gemini.env  README.md  gemini_service.py  main.py  models.py  pyproject.toml  requirements.txt  test_gemini.py
Inkly/templates_static/: game_manager.py  gemini_service.py  main.py  models.py  requirements.txt  test_geminiapi.py
Inkly/templates_static/static/: game.js
Inkly/templates_static/templates/: game.html  leaderboard.html
static/: game.js
templates/: game.html  index.html
templates_static/: game_manager.py  gemini_service.py  main.py  models.py  pyproject.toml  test_draw_debug.py  test_gemini.py
templates_static/static/: game.js
templates_static/templates/: game.html  index.html  leaderboard.html  test_minimal.html
